# infrascloud

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  COMPLETION.md  COMPLETION_CERTIFICATE.txt  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Dockerfile.dev  INSTALL.md  MANIFEST.in  NOTICE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  netlify.toml  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh  setup.cfg  setup.py  upload_infrascloud.py  upload_simple.py
.gitlab/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_event_case_study.md
.gitlab/merge_request_templates/: default.md
docs/: INFRASCLOUD_RESEARCH_PAPER.docx  index.md
docs/theory/: aisi_framework.md
infras_core/: __init__.py  absorption.py  aisi.py  beamformer.py  classifier.py  coherence.py  ducting.py  microbarom.py  processor.py
infras_core/utils/: __init__.py  filters.py  geo.py  io.py  plotting.py
models/: aisi_weights_v1.json
notebooks/: README.md
reports/alerts/: alert_20260312_031534.txt
reports/daily/: report_20260312.txt
reports/monthly/: monthly_202603.txt
reports/weekly/: weekly_20260308_to_20260314.txt
scripts/: batch_validate.py  download_ims_data.py  export_aisi_report.py  generate_alerts.py  generate_all_reports.sh  generate_daily_report.py  generate_monthly_report.py  generate_weekly_report.py  run_realtime.py
tests/: conftest.py  test_aisi_basic.py  test_basic.py  test_scripts_basic.py
