# INFRAS-CLOUD Setup Configuration
# Atmospheric Infrasound & Severe Weather Acoustic Signatures
# Version: 1.0.0 | DOI: 10.5281/zenodo.18952438

[metadata]
name = infrascloud
version = 1.0.0
author = Samir Baladi
author_email = gitdeeper@gmail.com
maintainer = Samir Baladi
maintainer_email = gitdeeper@gmail.com
description = INFRAS-CLOUD: Atmospheric Infrasound & Severe Weather Acoustic Signatures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gitdeeper9/infrascloud
download_url = https://github.com/gitdeeper9/infrascloud/archive/v1.0.0.tar.gz
project_urls =
    Documentation = https://infrascloud.netlify.app/docs
    Source = https://github.com/gitdeeper9/infrascloud
    Bug Reports = https://github.com/gitdeeper9/infrascloud/issues
    Discussion = https://github.com/gitdeeper9/infrascloud/discussions
    DOI = https://doi.org/10.5281/zenodo.18952438
    Web Dashboard = https://infrascloud.netlify.app
    Research Paper = https://doi.org/10.5281/zenodo.18952438
license = MIT
license_file = LICENSE
platforms = any
keywords =
    infrasound,
    severe-weather,
    acoustics,
    microbaroms,
    tornado,
    hurricane,
    volcano,
    atmospheric-physics,
    signal-processing,
    beamforming,
    wavelet,
    geophysics,
    meteorology,
    ctbto,
    ims-network,
    open-source,
    scientific-computing,
    python

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9, <3.12
setup_requires =
    setuptools>=61.0
    wheel>=0.38
    cython>=0.29.0
install_requires =
    numpy>=1.24.0
    scipy>=1.10.0
    pandas>=2.0.0
    xarray>=2023.4.0
    numba>=0.57.0
    sympy>=1.11.1
    obspy>=1.4.0
    librosa>=0.10.0
    pyfftw>=0.13.0
    scikit-learn>=1.2.0
    matplotlib>=3.7.0
    plotly>=5.14.0
    seaborn>=0.12.0
    h5py>=3.8.0
    netCDF4>=1.6.0
    pyyaml>=6.0
    python-dotenv>=1.0.0
    joblib>=1.2.0
    flask>=2.3.0
    dash>=2.9.0
    dash-bootstrap-components>=1.4.0
    psycopg2-binary>=2.9.6
    sqlalchemy>=2.0.12
    redis>=4.5.0
    pyserial>=3.5
    pyusb>=1.2.0
    click>=8.1.0
    tqdm>=4.65.0
    requests>=2.30.0
    colorama>=0.4.6

[options.packages.find]
include =
    infrascloud
    infrascloud.*
exclude =
    tests
    tests.*
    docs
    docs.*
    examples
    examples.*
    notebooks
    notebooks.*

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-xdist>=3.0.0
    pytest-asyncio>=0.20.0
    black>=23.0.0
    isort>=5.0.0
    flake8>=6.0.0
    pylint>=2.0.0
    mypy>=1.0.0
    pre-commit>=3.0.0
    ipython>=8.0.0
    jupyter>=1.0.0
    nbconvert>=7.0.0
    nbformat>=5.0.0

ml =
    tensorflow>=2.12.0
    torch>=2.0.0
    pytorch-lightning>=2.0.0
    xgboost>=1.7.0
    lightgbm>=3.3.0
    prophet>=1.1.0
    statsmodels>=0.14.0

gpu =
    cupy-cuda11x>=12.0.0
    cudf>=23.0.0
    cuml>=23.0.0
    tensorrt>=8.5.0

docs =
    sphinx>=7.0.0
    sphinx-rtd-theme>=1.2.0
    sphinx-autodoc-typehints>=1.23.0
    sphinx-gallery>=0.13.0
    nbsphinx>=0.9.0
    mkdocs>=1.4.0
    mkdocs-material>=9.0.0
    mkdocstrings[python]>=0.22.0
    pymdown-extensions>=10.0.0

test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-xdist>=3.0.0
    pytest-asyncio>=0.20.0
    pytest-mock>=3.0.0
    responses>=0.23.0
    hypothesis>=6.0.0

sensors =
    pyserial>=3.5
    pyusb>=1.2.0
    pyvisa>=1.13
    pyvisa-py>=0.5.0

web =
    flask>=2.3.0
    flask-cors>=4.0.0
    flask-socketio>=5.3.0
    flask-restx>=1.1.0
    dash>=2.9.0
    dash-bootstrap-components>=1.4.0
    dash-daq>=0.5.0
    gunicorn>=20.1.0
    uvicorn>=0.22.0
    fastapi>=0.100.0

all =
    %(dev)s
    %(ml)s
    %(gpu)s
    %(docs)s
    %(test)s
    %(sensors)s
    %(web)s

[options.entry_points]
console_scripts =
    infrascloud = infrascloud.cli.main:cli
    infrascloud-init = infrascloud.cli.init:main
    infrascloud-collect = infrascloud.cli.collect:main
    infrascloud-process = infrascloud.cli.process:main
    infrascloud-aisi = infrascloud.cli.aisi:main
    infrascloud-serve = infrascloud.cli.serve:main
    infrascloud-test-sensors = infrascloud.cli.test_sensors:main
    infrascloud-calibrate = infrascloud.cli.calibrate:main
    infrascloud-monitor = infrascloud.cli.monitor:main
    infrascloud-diagnostic = infrascloud.cli.diagnostic:main
    infrascloud-download-sample = infrascloud.cli.download:main
    infrascloud-validate = infrascloud.cli.validate:main
    infrascloud-report = infrascloud.cli.report:main

infrascloud.sensors =
    mb2005 = infrascloud.sensors.mb2005:MB2005
    paros = infrascloud.sensors.paros:Paros2200A
    centaur = infrascloud.sensors.centaur:NanometricsCentaur
    vaisala = infrascloud.sensors.vaisala:WXT536

infrascloud.physics =
    microbarom = infrascloud.physics.microbarom:MicrobaromAmplitude
    ducting = infrascloud.physics.ducting:StratosphericDucting
    spectral = infrascloud.physics.spectral:SpectralPeakFrequency
    beamforming = infrascloud.physics.beamforming:BeamFormer
    absorption = infrascloud.physics.absorption:AtmosphericAbsorption
    coherence = infrascloud.physics.coherence:InterStationCoherence
    aisi = infrascloud.physics.aisi:AISI

infrascloud.processing =
    wavelet = infrascloud.processing.wavelet:WaveletProcessor
    beamforming = infrascloud.processing.beamforming:BeamFormer
    detection = infrascloud.processing.detection:EventDetector
    classification = infrascloud.processing.classification:AIEventClassifier

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude = .git,__pycache__,docs,venv,.venv,env,dist,build,notebooks,data
per-file-ignores =
    __init__.py:F401
    tests/*.py:S101  # Allow assert in tests

[isort]
profile = black
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = infrascloud
known_third_party = numpy,scipy,pandas,xarray,obspy,librosa,matplotlib,plotly,sklearn,tensorflow,torch,flask,dash

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
disallow_untyped_defs = False
check_untyped_defs = True
follow_imports = silent
exclude = (build|docs|tests|examples|notebooks|data)/

[mypy.plugins.numpy.*]
plugins = numpy.typing.mypy_plugin

[pylint.MASTER]
ignore = CVS
ignore-patterns = ^.*\.md$,^.*\.rst$
jobs = 0
load-plugins = pylint.extensions.docparams, pylint.extensions.docstyle
persistent = yes
suggestion-mode = yes

[pylint.MESSAGES CONTROL]
disable =
    C0111,  # missing-docstring
    C0103,  # invalid-name
    R0903,  # too-few-public-methods
    R0913,  # too-many-arguments
    R0914,  # too-many-locals
    R0915,  # too-many-statements
    W0511,  # fixme
    W0703,  # broad-except

[pylint.REPORTS]
output-format = colorized
reports = no
score = yes

[pylint.DESIGN]
max-args = 10
max-attributes = 15
max-locals = 25
max-returns = 10
max-branches = 20
max-statements = 100
max-parents = 10
max-module-lines = 2000

[tool:pytest]
minversion = 7.0
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    -ra
    --strict-markers
    --strict-config
    --tb=short
    --verbose
    --cov=infrascloud
    --cov-report=term
    --cov-report=html
    --cov-report=xml
    --no-cov-on-fail
markers =
    slow: marks tests as slow
    sensor: marks tests that require actual sensor hardware
    gpu: marks tests that require GPU
    integration: marks integration tests
    unit: marks unit tests
    validation: marks validation tests with IMS data

[coverage:run]
source = infrascloud
omit =
    */tests/*
    */docs/*
    */examples/*
    */notebooks/*
    */setup.py
    */version.py
    */conftest.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if __name__ == .__main__.:
    raise AssertionError
    raise NotImplementedError
    return NotImplemented
    pass
    ^\s*\.\.\.$

[coverage:html]
directory = htmlcov

[coverage:xml]
output = coverage.xml

[coverage:json]
output = coverage.json

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[bdist_wheel]
universal = 0

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[aliases]
test = pytest

# =============================================================================
# END OF SETUP CONFIGURATION
# =============================================================================
